--- a/index.html
+++ b/index.html
@@ -31,19 +31,44 @@
             </div>
 
             <div class="info-section">
-
+                <div class="info-title">Some random information.</div>
+                <div class="info-grid">
+                    <div class="info-item">
+                        <div class="info-img"></div>
+                        <p class="info-text">this is some subtext under an illustration image</p>
+                    </div>
+                    <div class="info-item">
+                        <div class="info-img"></div>
+                        <p class="info-text">this is some subtext under an illustration image</p>
+                    </div>
+                    <div class="info-item">
+                        <div class="info-img"></div>
+                        <p class="info-text">this is some subtext under an illustration image</p>
+                    </div>
+                    <div class="info-item">
+                        <div class="info-img"></div>
+                        <p class="info-text">this is some subtext under an illustration image</p>
+                    </div>
+                </div>
             </div>
 
             <div class="quote-section">
-
+                <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+                <div class="quote-author">-Thor, God of Thunder</div>
             </div>
 
-            <div class="call-to-action">
-
+            <div class="call-to-action-section">
+                <div class="action-card">
+                    <div class="action-text">
+                        <div class="card-title">Call to action! It's time!</div>
+                        <div class="card-text">Sign up for our product by clicking that button right over there!</div>
+                    </div>
+                    <button class="btn-action">Sign up</button>
+                </div>
             </div>
 
             <div class="footer">
-
+                Copyright &copy The Odin Project 2021
             </div>
         </div>
     </body>
